# my_rpg_2019

./: .intro_de.txt  .intro_eng.txt  .intro_fr.txt  CMakeLists.txt  Makefile  help
adrian/: Boss_epic.tmx  MAIN.tmx  MAIN_NEW.tmx  Strand_1.tmx  Strand_2.tmx  Strand_3.tmx  Strand_4.tmx  Strand_5.tmx  Tileset1.tsx  Tileset2.tsx  Tileset3.tsx  Wiese_1.tmx  Wiese_2.tmx  Wiese_3.tmx  Wiese_4.tmx  Wiese_5.tmx  höhle_1.tmx  höhle_2.tmx  höhle_3.tmx  höhle_4.tmx  höhle_5.tmx  main.tmx
collisions/: boss_map.txt  cave_1.txt  cave_2.txt  cave_3.txt  cave_4.txt  cave_5.txt  gras_1.txt  gras_2.txt  gras_3.txt  gras_4.txt  gras_5.txt  main.txt  water_1.txt  water_2.txt  water_3.txt  water_4.txt  water_5.txt
include/: all_includes.h  macros.h  player_collision_size.h  structs.h
karl/: collision.c  first_map.json  first_map.tmx  main.c  script_collision.py  test_map.json  tiles-1.tsx  tileset-2.tsx
links/: boss_map.txt  cave_1.txt  cave_2.txt  cave_3.txt  cave_4.txt  cave_5.txt  gras_1.txt  gras_2.txt  gras_3.txt  gras_4.txt  gras_5.txt  main.txt  water_1.txt  water_2.txt  water_3.txt  water_4.txt  water_5.txt
read_map/: map_reader.py
src/: add_to_menus.c  boss.c  boss_collider.c  boss_fight.c  change.c  change_map.c  chat_box.c  check_collisions.c  check_link.c  choice_animation.c  create.c  destroy.c  display_inventory.c  do_libs.c  draw.c  enemy_controller.c  enemy_init.c  enemy_move.c  enemy_spawn.c  enemy_textures.c  event.c  game_over.c  gameloop.c  gender.c  gender_init.c  get_player_funcs.c  get_seconds.c  hud.c  hud_destroy.c  hud_init.c  hud_init_two.c  init_boss.c  (+44 more)
(+23 files in other folders)
